<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Searcher</string>
    <string name="action_settings">Settings</string>
    <string name="search_button">Search</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_settings">Search Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="advanced_search">Advanced Search Options</string>
    <string name="image_size">Size</string>
    <string name="image_type">Type</string>
    <string name="image_color">Color</string>
    <string name="site">Site</string>
    <string name="saveButton">Save</string>
    <string name="title_activity_image">Image</string>

</resources>
